Work in progreess
I haven't worked on this in like 4+ years, but I found these files in progress and not checked in, so I'm checking them into this branch.  The idea was to migrate away from the Matisse form that I created in NetBeans 20+ years ago into a form in IntelliJ... it has pictures of dice which makes it more fun.  There are a bunch of scoping and renaming of variables too.